src/objects/CS_Product_Relation__c.object
<CustomObject>
    <fields>
        <fullName>CS_Create_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_No_Customer_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>*** Service Cloud  This Field is used to  Check No Customer Contact Flag on Parent Asset*****</description>
        <label>No Customer Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_No_Software_Downloads__c</fullName>
        <defaultValue>false</defaultValue>
        <description>*** New Field to  Skip Software Download Record Creation *****</description>
        <label>No Software Downloads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Product_Relation_Type__c</fullName>
        <description>*** Service Cloud-  Product Relation Type***</description>
        <formula>CS_Source_Product_Type__c +&apos;-&apos;+ CS_Target_Product_Type__c</formula>
        <label>Product Relation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Source_Product_Id__c</fullName>
        <description>*** Service Cloud  - Displays SKU  Id  or Product Code based on Product Record Type ****</description>
        <formula>CASE(CS_Source_Product_Type__c, 
&apos;SKU&apos;,CS_Source_Product__r.SKU_ID__c,
&apos;Sku&apos;,CS_Source_Product__r.SKU_ID__c,
&apos;Standard Products&apos;,BLANKVALUE(CS_Source_Product__r.ProductCode, CS_Target_Product__r.Product__r.ProductCode), 
&apos;Entitled Product&apos;,BLANKVALUE(CS_Source_Product__r.ProductCode, CS_Target_Product__r.Product__r.ProductCode), &apos;NA&apos;)</formula>
        <label>Source  Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Source_Product_Type__c</fullName>
        <description>***Service Cloud Source Product Type*****</description>
        <formula>CS_Source_Product__r.RecordType.Name</formula>
        <label>Source Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Source_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Relations-Source Product</relationshipLabel>
        <relationshipName>Source_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Support_Group_Name__c</fullName>
        <label>Support Group Name</label>
        <picklist>
            <picklistValues>
                <fullName>Billing System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Target_Product_Id__c</fullName>
        <description>*** Service Cloud - Displays SKU Id or Product Code based on Product Record Type ****</description>
        <formula>CASE( CS_Target_Product_Type__c, 
&apos;SKU&apos;, CS_Target_Product__r.SKU_ID__c, 
&apos;Standard Products&apos;,BLANKVALUE(CS_Target_Product__r.ProductCode, CS_Target_Product__r.Product__r.ProductCode),
&apos;Entitled Product&apos;,BLANKVALUE(CS_Target_Product__r.ProductCode, CS_Target_Product__r.Product__r.ProductCode), &apos;NA&apos;)</formula>
        <label>Target Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Target_Product_Type__c</fullName>
        <description>***Service Cloud Target Product Type*****</description>
        <formula>CS_Target_Product__r.RecordType.Name</formula>
        <label>Target Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Target_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Relations (Target product)</relationshipLabel>
        <relationshipName>Target_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prod_Relation_Ref__c</fullName>
        <externalId>true</externalId>
        <label>Prod Relation - Ref</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Relation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CS_Product_Relation_Type__c</columns>
        <columns>CS_Source_Product__c</columns>
        <columns>CS_Target_Product__c</columns>
        <columns>CS_Source_Product_Id__c</columns>
        <columns>CS_Target_Product_Id__c</columns>
        <columns>CS_Support_Group_Name__c</columns>
        <columns>CS_Create_Asset__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BC</fullName>
        <columns>NAME</columns>
        <columns>CS_Source_Product__c</columns>
        <columns>CS_Target_Product__c</columns>
        <columns>CS_Product_Relation_Type__c</columns>
        <columns>CS_Support_Group_Name__c</columns>
        <columns>CS_Source_Product_Id__c</columns>
        <columns>CS_Target_Product_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Support_Group_Name__c</field>
            <operation>equals</operation>
            <value>Billing System</value>
        </filters>
        <label>BC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ClaimCenter</fullName>
        <columns>NAME</columns>
        <columns>CS_Source_Product__c</columns>
        <columns>CS_Target_Product__c</columns>
        <columns>CS_Product_Relation_Type__c</columns>
        <columns>CS_Support_Group_Name__c</columns>
        <columns>CS_Source_Product_Id__c</columns>
        <columns>CS_Target_Product_Id__c</columns>
        <columns>CS_Create_Asset__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Support_Group_Name__c</field>
            <operation>equals</operation>
            <value>Claim System</value>
        </filters>
        <label>ClaimCenter</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cognos</fullName>
        <columns>NAME</columns>
        <columns>CS_Product_Relation_Type__c</columns>
        <columns>CS_Support_Group_Name__c</columns>
        <columns>CS_Source_Product__c</columns>
        <columns>CS_Target_Product__c</columns>
        <columns>CS_Create_Asset__c</columns>
        <columns>CS_No_Customer_Contact__c</columns>
        <columns>CS_No_Software_Downloads__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Target_Product__c</field>
            <operation>contains</operation>
            <value>Cognos</value>
        </filters>
        <label>Cognos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PolicyCenter</fullName>
        <columns>NAME</columns>
        <columns>CS_Source_Product__c</columns>
        <columns>CS_Target_Product__c</columns>
        <columns>CS_Product_Relation_Type__c</columns>
        <columns>CS_Support_Group_Name__c</columns>
        <columns>CS_Source_Product_Id__c</columns>
        <columns>CS_Target_Product_Id__c</columns>
        <columns>CS_Create_Asset__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Support_Group_Name__c</field>
            <operation>equals</operation>
            <value>Policy System</value>
        </filters>
        <label>PolicyCenter</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Entitled Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>